Update grammar and config

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
-node_modules/
-build/
 *.log
 .DS_Store
-src/
+**.code-workspace
+node_modules/
+.vscode/
+*.wasm
+*.obj
+*.o
+*.a
+*.so
+*.so.*
+*.dylib
+*.dll
+*.pc
+*.exp
+*.lib
+.venv/
+dist/
+*.egg-info
+*.whl
